--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Martina Schmidhuber
+author: Priv.-Doz. Dr. Martina Schmidhuber
 email: martinaschmidhuber@gmx.at
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/martinaschmidhuber" # the subpath of your site, e.g. /blog
